syntax = "proto3";

package com.spotify.home.dac.component.v1.proto;

option java_multiple_files = true;
option java_package = "com.spotify.home.dac.component.v1.proto";

message EpisodeCardSmallComponent {
  string title = 1;
  string navigate_uri = 2;
  string image_uri = 3;
}

message EpisodeCardMediumComponent {
  string title = 1;
  string subtitle = 2;
  string navigate_uri = 3;
  string image_uri = 4;
}

message EpisodeCardLargeComponent {
  string title = 1;
  string subtitle = 2;
  string navigate_uri = 3;
  string image_uri = 4;
}
